--- a/wine_wholedata_EDA.ipynb
+++ b/wine_wholedata_EDA.ipynb
@@ -77,9 +77,7 @@
     "wines = pd.concat([red_wine, white_wine])\n",
     "\n",
     "# re-shuffle records just to randomize data points\n",
-    "wines = wines.sample(frac=1, random_state=42).reset_index(drop=True)\n",
-    "\n",
-    "\n"
+    "wines = wines.sample(frac=1, random_state=42).reset_index(drop=True)"
    ]
   },
   {
