--- a/Wine_Type_Analysis.ipynb
+++ b/Wine_Type_Analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Wine Data Analysis "
+    "# Wine Type Analysis "
    ]
   },
   {
